# DongBoyAdvance-DBA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/: config.yml
.github/workflows/: main.yml
DongBoyAdvance_Debugger/: CMakeLists.txt  main.c
app/: CMakeLists.txt  main.c
docs/: github-recovery-codes.txt
dumps/mGBA/: dump_1.txt
scripts/: mgba-debug.sh
source/CPU/: cpu.c  cpu.h  instruction_set.c  instruction_set.h
source/log/: CMakeLists.txt  logger.c  logger.h
source_dba/CPU/: CMakeLists.txt  cpu.c  cpu.h  instruction_set.c  instruction_set.h
source_dba/File_Parser/: CMakeLists.txt  rom_parser.c  rom_parser.h
source_dba/ROM_Parser/: CMakeLists.txt  rom_parser.c  rom_parser.h
source_dba/Tests/: master_test.c  master_test.h
source_dba/Tests/CPU/: CMakeLists.txt  test_CPU.c  test_CPU.h
source_dba/Tests/Instruction_Set/: CMakeLists.txt  test_Instructions.c  test_Instructions.h
source_dba/Tests/Master_Test/: CMakeLists.txt  master_test.c  master_test.h
source_dba/log/: CMakeLists.txt  debugger.c  debugger.h  logger.c  logger.h
