cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(DongBoyAdvance VERSION 1.0.0 LANGUAGES C)
set(CMAKE_BUILD_TYPE DEBUG)
set(CMAKE_CURRENT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/source)
set(HELP_MSG "Email john.mushatt@gmail.com and hope he can fix it")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")

if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/CPU)
    set(CPU_SRC ${CMAKE_CURRENT_SOURCE_DIR}/CPU)
#    include_directories(${CPU_SRC})
#    add_subdirectory(${CPU_SRC})

    message(STATUS "FOUND CPU SOURCE @ ${CPU_SRC}")
else()
    message(WARNING "COULD NOT FIND CPU SOURCE, GONNA NEED TO FIX THAT!${HELP_MSG}")
endif ()
message(STATUS "${INCLUDE_DIRECTORIES}")
if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/log)
    set(LOG_SRC ${CMAKE_CURRENT_SOURCE_DIR}/log)
#    add_subdirectory(${LOG_SRC})
    message(STATUS "FOUND LOG SOURCE @ ${LOG_SRC}")
else()
        message(WARNING "COULD NOT FIND LOG SOURCE, GONNA NEED TO FIX THAT!${HELP_MSG}")
endif ()
#add_subdirectory(${CPU_SRC})
set(EXE_NAME ${PROJECT_NAME}_v${PROJECT_VERSION})
set(CMAKE_C_STANDARD  11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -Werror")

file(GLOB_RECURSE DBA_SRC "source/*.c")
file(GLOB_RECURSE DBA_HEADER "source/*.h")

set (DBA_INCLUDE_DIRS "")
foreach (_headerFile ${DBA_HEADER})
    get_filename_component(_dir ${_headerFile} PATH)
    list (APPEND DBA_INCLUDE_DIRS ${_dir})
endforeach()
list(REMOVE_DUPLICATES DBA_INCLUDE_DIRS)
add_executable(${EXE_NAME} main.c ${DBA_SRC})
target_include_directories(${EXE_NAME} PRIVATE ${LOG_SRC} ${CPU_SRC})

#target_link_libraries(${EXE_NAME} LINK_PUBLIC cpu_lib log_lib)
